# bankroll-risk-api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/routes/: __init__.py  risk.py
app/api/schemas/: __init__.py  request.py  response.py
app/core/: logging.py  settings.py
app/domain/: __init__.py  assumptions.py  warnings.py
app/domain/formulas/: __init__.py  expectancy.py  growth.py  kelly.py  terminal_distribution.py
app/domain/services/: __init__.py  analyze_strategy.py
tests/contract/: test_fuzzing.py  test_risk_contract.py
tests/integration/: test_health.py  test_risk_endpoint.py
tests/performance/: load_test.js
tests/property/: test_risk_properties.py
tests/unit/: test_expectancy.py  test_growth.py  test_kelly.py  test_request_schema.py  test_terminal_distribution.py
