[project]
name = "bankroll-risk-api"
version = "0.1.0"
description = "Deterministic FastAPI service for exact fixed-fraction bankroll risk analysis."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "numpy>=2.0,<3.0",
  "pydantic>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27,<1.0",
  "hypothesis>=6.0,<7.0",
  "mypy>=1.10,<2.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true
packages = ["app"]
